Resolving test issue
Signed-off-by: gael@lhopital.org <gael@lhopital.org>